--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "buefy": "^0.8.6",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-buefy": "^0.3.17"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
     "@nuxtjs/tailwindcss": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
+    "nodemon": "^1.18.9",
     "vue-jest": "^4.0.0-0"
   }
 }
