--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "express": "^4.16.4",
-    "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.17"
+    "nuxt": "^2.11.0",
+    "nuxt-buefy": "^0.3.19"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^1.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@nuxtjs/tailwindcss": "^1.2.0",
+    "@vue/test-utils": "^1.0.0-beta.30",
     "babel-jest": "^24.1.0",
     "cross-env": "^5.2.1",
     "nodemon": "^1.18.9",
