--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Geargame_client",
+  "name": "geargame30",
   "version": "1.0.0",
   "description": "My world-class Nuxt.js project",
   "author": "Thanatossan",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bootstrap-vue": "^2.1.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "nuxt": "^2.11.0",
     "nuxt-buefy": "^0.3.19"
   },
