--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@nuxtjs/font-awesome": "^1.0.4",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "express": "^4.16.4",
     "nuxt": "^2.11.0",
-    "nuxt-buefy": "^0.3.19"
+    "nuxt-buefy": "^0.3.19",
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.2.0",
