--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bootstrap-vue": "^2.1.0",
     "express": "^4.16.4",
     "nuxt": "^2.11.0",
-    "nuxt-buefy": "^0.3.19"
+    "nuxt-buefy": "^0.3.19",
+    "portal-vue": "^2.1.6"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.2.0",
