--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "jquery": "^3.4.1",
     "nuxt": "^2.11.0",
     "nuxt-buefy": "^0.3.19"
   },
