--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Geargame_client",
+  "name": "geargame30",
   "version": "1.0.0",
   "description": "My world-class Nuxt.js project",
   "author": "Thanatossan",
