--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/font-awesome": "^1.0.4",
+    "@nuxtjs/google-analytics": "^2.2.2",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "express": "^4.17.1",
